[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Mein Blog"
authors = ["Marco Bakera <marco@bakera.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = "^4.8.0"
beautifulsoup4 = "^4.10.0"
Markdown = "^3.3.4"
pelican-sitemap = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
